fix overflow

--- a/src/pages/guild/style.module.scss
+++ b/src/pages/guild/style.module.scss
@@ -43,10 +43,13 @@
 }
 
 .membersList {
+  padding: 0.5rem 0;
   width: 100%;
+  max-height: 18rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   gap: 0.5rem;
+  overflow-y: auto;
 }
